src/objects/Price_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Load_Check__c</fullName>
        <description>Dummy, Put for data load</description>
        <label>Data Load Check</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count__c</fullName>
        <label>Line Item Count</label>
        <summaryForeignKey>Price_Exception_Line_Item__c.Price_Exception__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_Item_Zero_Qty__c</fullName>
        <label>Line Item Zero Qty</label>
        <summaryFilterItems>
            <field>Price_Exception_Line_Item__c.Quantity__c</field>
            <operation>lessThan</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Price_Exception_Line_Item__c.Price_Exception__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Price_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_EVM_Final_Approver_Comments__c</fullName>
        <label>PC EVM Final Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_EVM_Hardware_Only_Margin__c</fullName>
        <label>PC EVM Hardware Only Margin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_EVM_Margin__c</fullName>
        <label>PC EVM Margin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_EVM_Submitter_Comments__c</fullName>
        <label>SB EVM PC Submitter Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_EVM_Total_Oracle__c</fullName>
        <label>PC EVM Total Oracle</label>
        <summarizedField>Price_Exception_Line_Item__c.PC_Oracle_Price__c</summarizedField>
        <summaryForeignKey>Price_Exception_Line_Item__c.Price_Exception__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_EVM_Total_Sell__c</fullName>
        <label>PC EVM Total Sell</label>
        <summarizedField>Price_Exception_Line_Item__c.Unit_Sell_Price__c</summarizedField>
        <summaryForeignKey>Price_Exception_Line_Item__c.Price_Exception__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_Legacy_SB_Created_By__c</fullName>
        <label>Legacy SB Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EVM_Price_Concessions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PE_Deal_ID__c</fullName>
        <label>PE Deal ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Price Exception which is promoted will have the value of this field set as true</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <externalId>true</externalId>
        <label>SB Quote ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EVM Price Concession</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Opportunity__c</columns>
        <columns>Quote_ID__c</columns>
        <columns>PE_Deal_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Quote_Amount__c</columns>
        <columns>Primary__c</columns>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SB Quote ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EVM Price Concessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>